lanecwe-Prod/src/objects/PGI_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PGI_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alert_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>_X_LFR Alert Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Subscription_Fee_per_License_GM__c</fullName>
        <label>AnnualSubscripnFeePerLicense(GM)_X_LFR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Subscription_Fee_per_License_IMT__c</fullName>
        <label>AnnualSubscripnFeePerLicense-IMT_x_LFR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_renewal_Interval_in_months__c</fullName>
        <label>Auto-renewal Interval (in months)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancellation_Notice__c</fullName>
        <label>Cancellation Notice</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>IF(BEGINS ( OwnerId , &quot;005&quot;), TEXT( Owner_Copy__r.Channel__c ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit_End_if_different_from_Cntrct_End__c</fullName>
        <label>Commit End-if different from Cntrct End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Anniversary_Date__c</fullName>
        <label>Contract End/Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract ID_x_LFR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number_X_LFR</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Purge_Date_Seven_years__c</fullName>
        <label>Contract Purge Date (Seven years)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Volume__c</fullName>
        <label>Minimum Contract Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractual_Credit_Rebate_Bonus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractual Credit, Rebate, Bonus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copied_from_Company_ID__c</fullName>
        <label>Copied from Company ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Entity_Name__c</fullName>
        <label>Corporate Entity Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Signature_Type__c</fullName>
        <label>Customer Signature Type_X_LFR</label>
        <picklist>
            <picklistValues>
                <fullName>eSignature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Signature__c</fullName>
        <label>Customer Signature_X_LFR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_The_Contract_Was_Amended__c</fullName>
        <label>Date The Contract Was Amended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Contract Type_X_LFR</label>
        <picklist>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription License Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Related Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy for Reporting Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gateway Subscription License Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Subscription License Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gateway Customer Service Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date_of_Promotion__c</fullName>
        <label>Effective End Date of Promotion_x_LFR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date_of_Promotion__c</fullName>
        <label>Effective Start Date of Promotion_x_LFR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_Additional_c__c</fullName>
        <description>This field references an external ID relating to legacy contracts stored outside of Salesforce for contract meta data records that were imported from Netsuite,</description>
        <externalId>true</externalId>
        <label>File Store Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Store_Contract_Status__c</fullName>
        <label>Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superseded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Store_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>_X_LFR File Store Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Government_Entity_Customer__c</fullName>
        <label>Government Entity (Customer)</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Contract_Term_in_months__c</fullName>
        <label>Initial Contract Term (in months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Penalty_Percent__c</fullName>
        <label>Interest Penalty Percent</label>
        <picklist>
            <controllingField>Document_Type__c</controllingField>
            <picklistValues>
                <fullName>0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Signature_Type__c</fullName>
        <label>Internal Signature Type</label>
        <picklist>
            <picklistValues>
                <fullName>eSignature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Signature__c</fullName>
        <label>Internal Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>IF(BEGINS ( OwnerId , &quot;005&quot;), Owner_Copy__r.Location__c ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Commitment_Shortfall_Non_std_lang__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Min Commitment Shortfall (Non-std lang)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_to_Month_Exclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Month to Month Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Cost_per_GM_License__c</fullName>
        <label>_X_LFR Monthly Cost per GM License</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Cost_per_iMeet_License__c</fullName>
        <label>_x_LFR Monthly Cost per iMeet License</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Total_for_GM_Licenses__c</fullName>
        <label>_X_LFR Monthly Total for GM Licenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Total_for_iMeet_Licenses__c</fullName>
        <label>_X_LFR Monthly Total for iMeet Licenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Contract Name__c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_Std_Payment_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Std Payment Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Associated_with_Termination__c</fullName>
        <description>Paragraph Size</description>
        <label>Notes Associated with Termination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Copy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>IF(BEGINS ( OwnerId , &quot;005&quot;), TEXT( Owner_Copy__r.Region__c ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contract</label>
        <referenceTo>PGI_Contract__c</referenceTo>
        <relationshipLabel>Sales Contracts</relationshipLabel>
        <relationshipName>Sales_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <controllingField>Document_Type__c</controllingField>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Premiere_Company_ID__c</fullName>
        <label>Premiere Company ID_X_LFR</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotional_Trial_Offer_Period__c</fullName>
        <label>Promotional Trial Offer Period_x_LFR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prompt_Pay_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prompt Pay Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuoteNumber__c</fullName>
        <label>QuoteNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Sales Contracts</relationshipLabel>
        <relationshipName>PGI_Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Commit_Period__c</fullName>
        <label>Minimum Committment Term</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC18ID__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC 18 PGIContract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAs_with_Financial_Penalties__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLAs with Financial Penalties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>_X_LFR Sales Rep (Contract)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PGI_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Tesla__c</fullName>
        <label>Sales Rep (Tesla)_X_LFR</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Commencement_Date__c</fullName>
        <label>Service Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <label>Signature Date_X_LFR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_License_Term_Length_GM_yrs__c</fullName>
        <label>Subscription License Term Length-GM yrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_License_Term_Length_IMT_yrs__c</fullName>
        <label>Subscription License Term Length-IMT yrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_License_Type_GlobalMeet__c</fullName>
        <label>SubscripnLicenseType(GlobalMeet)_X_LFR</label>
        <picklist>
            <picklistValues>
                <fullName>iMeet Bundled-10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet Unbundled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet Bundled-10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet Bundled-1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet Unbundled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_License_Type_iMeet__c</fullName>
        <label>Subscription License Type (iMeet)_x_LFR</label>
        <picklist>
            <picklistValues>
                <fullName>iMeet Bundled-10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet Unbundled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet Bundled-10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet Bundled-1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet Unbundled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Payment_Option__c</fullName>
        <label>_X_LFR Subscription Payment Option</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-paid (Annual)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installments (Monthly)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <formula>IF(BEGINS ( OwnerId , &quot;005&quot;),Owner_Copy__r.Manager.FirstName +&quot; &quot;+ Owner_Copy__r.Manager.LastName ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Length_for_iMeet_Licenses_if_1_mo__c</fullName>
        <label>_X_LFR Term Length for iMeet Licenses</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_for_GM_Licenses_if_1_mo__c</fullName>
        <label>_X_LFR Term for GM Licenses if &gt; 1 mo</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Licensed_Value_for_GM__c</fullName>
        <label>Total Licensed Value for GM_x_LFR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Licensed_Value_for_iMeet__c</fullName>
        <label>_X_LFR Total Licensed Value for iMeet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Subscription_Fee_for_Term_GM__c</fullName>
        <label>TotalSubscriptionFeeForTerm-GM_x_LFR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Subscription_Fee_for_Term_IMT__c</fullName>
        <label>TotalSubscription Fee for Term-IMT_x_LFR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Turn_Off_This_Contract_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Turn Off This Contract Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volume_Discounts_Tiered_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volume Discounts (Tiered Pricing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_GM_Licenses_original_contract__c</fullName>
        <label>_X_LFR# of GM Licenses-original contract</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_iMeet_Licenses_original_contract__c</fullName>
        <label>_X_LFR # of iMeet Licenses-original</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Sales Contract</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Quote_00Ne0000000JpXZEA0</fullName>
        <active>true</active>
        <field>Quote.PGI_Contract__c</field>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>PGI_Contract__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Quote_Master Contract Name</name>
        <sourceObject>Quote</sourceObject>
    </namedFilters>
    <pluralLabel>Sales Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>